--- a/pcb/CustomMessageBox.xaml
+++ b/pcb/CustomMessageBox.xaml
@@ -1,39 +1,95 @@
 ﻿<Controls:MetroWindow x:Class="pcb.CustomMessageBox"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:pcb"
-        xmlns:p="clr-namespace:pcb.Properties"
-        mc:Ignorable="d" xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro" Topmost="True"
-        Height="200" Width="400" ResizeMode="NoResize" ShowCloseButton="False" ShowInTaskbar="False" Icon="Command_Block.ico"
-        Closing="MetroWindow_Closing" BorderBrush="#1686B5" BorderThickness="2" ShowTitleBar="False" Background="White" WindowStartupLocation="CenterScreen">
+                      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                      xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+                      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                      xmlns:local="clr-namespace:pcb"
+                      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                      xmlns:p="clr-namespace:pcb.Properties"
+                      Width="400"
+                      Height="200"
+                      Background="White"
+                      BorderBrush="#1686B5"
+                      BorderThickness="2"
+                      Closing="MetroWindow_Closing"
+                      Icon="Command_Block.ico"
+                      ResizeMode="NoResize"
+                      ShowCloseButton="False"
+                      ShowInTaskbar="False"
+                      ShowTitleBar="False"
+                      Topmost="True"
+                      WindowStartupLocation="CenterScreen"
+                      mc:Ignorable="d">
     <Grid>
-        <Rectangle VerticalAlignment="Top" Height="40" Fill="#1686B5" x:Name="TitleBar"/>
-        <TextBlock VerticalAlignment="Top" Margin="10" Height="25" Foreground="Black" FontSize="20" x:Name="title" FontFamily="Microsoft Yahei"></TextBlock>
+        <Rectangle x:Name="TitleBar"
+                   Height="40"
+                   VerticalAlignment="Top"
+                   Fill="#1686B5" />
+        <TextBlock x:Name="title"
+                   Height="25"
+                   Margin="10"
+                   VerticalAlignment="Top"
+                   FontFamily="Microsoft Yahei"
+                   FontSize="20"
+                   Foreground="Black" />
         <ScrollViewer Margin="20,60,5,45">
-            <TextBlock x:Name="message" TextWrapping="Wrap" Foreground="Black" Background="White" FontSize="20" FontFamily="Microsoft Yahei"></TextBlock>
+            <TextBlock x:Name="message"
+                       Background="White"
+                       FontFamily="Microsoft Yahei"
+                       FontSize="14"
+                       Foreground="Black"
+                       TextWrapping="Wrap" />
         </ScrollViewer>
-        <Button x:Name="btnClose" Content="{x:Static p:UIresources.cancel}" HorizontalAlignment="Right" Margin="0,0,10,10" VerticalAlignment="Bottom" FontFamily="Microsoft Yahei" Width="100" Height="25" Click="btnClose_Click" FontSize="15" Padding="0"></Button>
-        <Button x:Name="btnNo" Content="{x:Static p:UIresources.no}" HorizontalAlignment="Right" FontSize="15" Padding="0" Margin="0,0,120,10" FontFamily="Microsoft Yahei" VerticalAlignment="Bottom" Width="100" Height="25" Click="btnNo_Click" ></Button>
-        <Button x:Name="btnYes" Content="{x:Static p:UIresources.yes}" HorizontalAlignment="Right" FontSize="15" Padding="0" Margin="0,0,230,10" FontFamily="Microsoft Yahei" VerticalAlignment="Bottom" Width="100" Height="25" Click="btnYes_Click" ></Button>
+        <Button x:Name="btnClose"
+                Width="100"
+                Height="25"
+                Margin="0,0,10,10"
+                HorizontalAlignment="Right"
+                VerticalAlignment="Bottom"
+                Click="btnClose_Click"
+                Content="{x:Static p:UIresources.cancel}"
+                FontFamily="Microsoft Yahei"
+                FontSize="15"
+                Padding="0" />
+        <Button x:Name="btnNo"
+                Width="100"
+                Height="25"
+                Margin="0,0,120,10"
+                HorizontalAlignment="Right"
+                VerticalAlignment="Bottom"
+                Click="btnNo_Click"
+                Content="{x:Static p:UIresources.no}"
+                FontFamily="Microsoft Yahei"
+                FontSize="15"
+                Padding="0" />
+        <Button x:Name="btnYes"
+                Width="100"
+                Height="25"
+                Margin="0,0,230,10"
+                HorizontalAlignment="Right"
+                VerticalAlignment="Bottom"
+                Click="btnYes_Click"
+                Content="{x:Static p:UIresources.yes}"
+                FontFamily="Microsoft Yahei"
+                FontSize="15"
+                Padding="0" />
     </Grid>
     <Window.Resources>
         <Style TargetType="Button">
-            <Setter Property="Background" Value="#CCCCCC"/>
+            <Setter Property="Background" Value="#CCCCCC" />
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type Button}">
                         <Border Background="{TemplateBinding Background}">
-                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
                         </Border>
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
-            <Setter Property="Foreground" Value="Black"/>
+            <Setter Property="Foreground" Value="Black" />
             <Style.Triggers>
                 <Trigger Property="IsMouseOver" Value="True">
-                    <Setter Property="Background" Value="#AAAAAA"/>
+                    <Setter Property="Background" Value="#AAAAAA" />
                 </Trigger>
             </Style.Triggers>
         </Style>
