--- a/pcb/FindReplaceDialog.xaml
+++ b/pcb/FindReplaceDialog.xaml
@@ -1,32 +1,77 @@
 ﻿<control:MetroWindow x:Class="pcb.FindReplaceDialog"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:pcb" TitleCaps="False" ShowInTaskbar="False"
-        xmlns:p="clr-namespace:pcb.Properties"
-        mc:Ignorable="d" Background="#545454" ShowMinButton="False" ShowMaxRestoreButton="False"                     
-        xmlns:control="http://metro.mahapps.com/winfx/xaml/controls" ResizeMode="NoResize"
-        Title="{x:Static p:UIresources.findOrReplace}" Height="170" Width="260" WindowStartupLocation="CenterOwner" Closing="MetroWindow_Closing">
+                     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                     xmlns:control="http://metro.mahapps.com/winfx/xaml/controls"
+                     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                     xmlns:local="clr-namespace:pcb"
+                     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                     xmlns:p="clr-namespace:pcb.Properties"
+                     Title="{x:Static p:UIresources.findOrReplace}"
+                     Width="260"
+                     Height="170"
+                     Background="#545454"
+                     BorderBrush="AliceBlue"
+                     Closing="MetroWindow_Closing"
+                     ResizeMode="NoResize"
+                     ShowInTaskbar="False"
+                     ShowMaxRestoreButton="False"
+                     ShowMinButton="False"
+                     TitleCaps="False"
+                     WindowStartupLocation="CenterOwner"
+                     mc:Ignorable="d">
     <Grid>
-        <TextBox x:Name="findTB" HorizontalAlignment="Left" Height="23" Margin="52,10,0,0"
-                 TextWrapping="Wrap" VerticalAlignment="Top" Width="193"/>
-        <Label Content="{x:Static p:UIresources.find}" HorizontalAlignment="Left" Margin="10,11,0,0" 
-               VerticalAlignment="Top"/>
-        <TextBox x:Name="replaceTB" HorizontalAlignment="Left" Height="23" Margin="52,41,0,0"
-                 TextWrapping="Wrap" VerticalAlignment="Top" Width="193"/>
-        <Label Content="{x:Static p:UIresources.replace}" HorizontalAlignment="Left" Margin="10,41,0,0" 
-               VerticalAlignment="Top"/>
-        <CheckBox Content="{x:Static p:UIresources.useRegex}" IsChecked="False" 
-            ToolTip="{x:Static p:UIresources.regexNeedEscape}"
-            x:Name="UseRegex" Margin="10,72,161,40"/>
-        <CheckBox Content="{x:Static p:UIresources.multiLine}" IsChecked="True"            
-            x:Name="MultiLine" Margin="170,72,0,40" HorizontalAlignment="Left" Width="75"/>
-        <Button x:Name="btnFindNext" Content="{x:Static p:UIresources.findNext}" HorizontalAlignment="Left" BorderThickness="0"
-                FontFamily="MicroSoft Yahei UI" Style="{DynamicResource SquareButtonStyle}"
-                Margin="10,106,0,0" VerticalAlignment="Top" Width="84" Click="btnFindNext_Click"/>
-        <Button x:Name="btnReplaceAll" Content="{x:Static p:UIresources.replaceAll}" HorizontalAlignment="Left" BorderThickness="0"
-                FontFamily="MicroSoft Yahei UI" Style="{DynamicResource SquareButtonStyle}"
-                Margin="170,106,0,0" VerticalAlignment="Top" Width="75" Click="btnReplaceAll_Click"/>
+        <TextBox x:Name="findTB"
+                 Width="178"
+                 Height="23"
+                 Margin="67,10,0,0"
+                 HorizontalAlignment="Left"
+                 VerticalAlignment="Top"
+                 TextWrapping="Wrap" />
+        <Label Margin="10,11,0,0"
+               HorizontalAlignment="Left"
+               VerticalAlignment="Top"
+               Content="{x:Static p:UIresources.find}" />
+        <TextBox x:Name="replaceTB"
+                 Width="178"
+                 Height="23"
+                 Margin="67,41,0,0"
+                 HorizontalAlignment="Left"
+                 VerticalAlignment="Top"
+                 TextWrapping="Wrap" />
+        <Label Margin="10,41,0,0"
+               HorizontalAlignment="Left"
+               VerticalAlignment="Top"
+               Content="{x:Static p:UIresources.replace}" />
+        <CheckBox x:Name="UseRegex"
+                  Margin="10,72,139,40"
+                  Content="{x:Static p:UIresources.useRegex}"
+                  IsChecked="False"
+                  ToolTip="{x:Static p:UIresources.regexNeedEscape}" />
+        <CheckBox x:Name="MultiLine"
+                  Width="105"
+                  Margin="140,72,0,40"
+                  HorizontalAlignment="Left"
+                  Content="{x:Static p:UIresources.multiLine}"
+                  IsChecked="True" />
+        <Button x:Name="btnFindNext"
+                Width="105"
+                Margin="10,106,0,0"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                BorderThickness="0"
+                Click="btnFindNext_Click"
+                Content="{x:Static p:UIresources.findNext}"
+                FontFamily="MicroSoft Yahei UI"
+                Style="{DynamicResource SquareButtonStyle}" />
+        <Button x:Name="btnReplaceAll"
+                Width="105"
+                Margin="140,106,0,0"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                BorderThickness="0"
+                Click="btnReplaceAll_Click"
+                Content="{x:Static p:UIresources.replaceAll}"
+                FontFamily="MicroSoft Yahei UI"
+                Style="{DynamicResource SquareButtonStyle}" />
     </Grid>
 </control:MetroWindow>
