--- a/pcb/Output.xaml
+++ b/pcb/Output.xaml
@@ -1,17 +1,52 @@
 ﻿<Controls:MetroWindow x:Class="pcb.Output"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-        xmlns:p="clr-namespace:pcb.Properties"
-        xmlns:local="clr-namespace:pcb"
-        mc:Ignorable="d" ResizeMode="NoResize" ShowMaxRestoreButton="False" ShowMinButton="False"
-        Icon="Command_Block.ico" ShowIconOnTitleBar="False"
-        Title="Output" Height="327" Width="498">
+                      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                      xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+                      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                      xmlns:local="clr-namespace:pcb"
+                      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                      xmlns:p="clr-namespace:pcb.Properties"
+                      Title="Output"
+                      Width="498"
+                      Height="327"
+                      Icon="Command_Block.ico"
+                      ResizeMode="NoResize"
+                      ShowIconOnTitleBar="False"
+                      ShowMaxRestoreButton="False"
+                      ShowMinButton="False"
+                      mc:Ignorable="d">
     <Grid>
-        <TextBox x:Name="textBox" HorizontalAlignment="Left" FontSize="13" FontFamily="Microsoft YaHei" Foreground="White" Height="246" Margin="10,10,0,0" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" VerticalAlignment="Top" Width="470"/>
-        <Button x:Name="button" Content="{x:Static p:UIresources.copy}" FontSize="13" Foreground="White" FontFamily="Microsoft YaHei" HorizontalAlignment="Left" Margin="162,261,0,0" VerticalAlignment="Top" Width="75" Click="button_Click"/>
-        <Button x:Name="button1" Click="copyAll" Content="{x:Static p:UIresources.copyAll}" HorizontalAlignment="Left" FontSize="13" Foreground="White" FontFamily="Microsoft YaHei" Margin="242,262,0,0" VerticalAlignment="Top" Width="75" Height="29"/>
+        <TextBox x:Name="textBox"
+                 Width="470"
+                 Height="246"
+                 Margin="10,10,0,0"
+                 HorizontalAlignment="Left"
+                 VerticalAlignment="Top"
+                 FontFamily="Microsoft YaHei"
+                 FontSize="13"
+                 Foreground="White"
+                 TextWrapping="Wrap"
+                 VerticalScrollBarVisibility="Auto" />
+        <Button x:Name="button"
+                Width="75"
+                Margin="162,261,0,0"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Click="button_Click"
+                Content="{x:Static p:UIresources.copy}"
+                FontFamily="Microsoft YaHei"
+                FontSize="13"
+                Foreground="White" />
+        <Button x:Name="button1"
+                Width="75"
+                Height="29"
+                Margin="242,262,0,0"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Click="copyAll"
+                Content="{x:Static p:UIresources.copyAll}"
+                FontFamily="Microsoft YaHei"
+                FontSize="13"
+                Foreground="White" />
     </Grid>
 </Controls:MetroWindow>
