--- a/pcb/ScriptWindow.xaml
+++ b/pcb/ScriptWindow.xaml
@@ -1,16 +1,34 @@
 ﻿<Controls:MetroWindow x:Class="pcb.ScriptWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:pcb"
-        xmlns:p="clr-namespace:pcb.Properties"
-        xmlns:avalonEdit="http://icsharpcode.net/sharpdevelop/avalonedit" 
-        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro" 
-        mc:Ignorable="d" Background="#232323" BorderBrush="AliceBlue" BorderThickness="1"
-        Title="{x:Static p:UIresources.runPython}" Height="300" Width="500" Closing="MetroWindow_Closing" TitleCaps="False">
+                      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                      xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+                      xmlns:avalonEdit="http://icsharpcode.net/sharpdevelop/avalonedit"
+                      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                      xmlns:local="clr-namespace:pcb"
+                      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                      xmlns:p="clr-namespace:pcb.Properties"
+                      Title="{x:Static p:UIresources.runPython}"
+                      Width="500"
+                      Height="300"
+                      Background="#232323"
+                      BorderBrush="AliceBlue"
+                      BorderThickness="1"
+                      Closing="MetroWindow_Closing"
+                      TitleCaps="False"
+                      mc:Ignorable="d">
     <Grid>
-        <avalonEdit:TextEditor WordWrap="True" x:Name="editor" Margin="10,10,10,50" FontFamily="Microsoft Yahei" Foreground="White"></avalonEdit:TextEditor>
-        <Button VerticalAlignment="Bottom" FontFamily="Microsoft Yahei" Content="{x:Static p:UIresources.run}" Width="70" Margin="210,0,210,10" Height="30" Click="Button_Click"></Button>
+        <avalonEdit:TextEditor x:Name="editor"
+                               Margin="10,10,10,50"
+                               FontFamily="Microsoft Yahei"
+                               Foreground="White"
+                               ShowLineNumbers="True"
+                               WordWrap="True" />
+        <Button Width="70"
+                Height="30"
+                Margin="210,0,210,10"
+                VerticalAlignment="Bottom"
+                Click="Button_Click"
+                Content="{x:Static p:UIresources.run}"
+                FontFamily="Microsoft Yahei" />
     </Grid>
 </Controls:MetroWindow>
