--- a/pcb/add_ac_list.xaml
+++ b/pcb/add_ac_list.xaml
@@ -1,23 +1,66 @@
 ﻿<control:MetroWindow x:Class="pcb.add_ac_list"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:pcb"
-        xmlns:p="clr-namespace:pcb.Properties"
-        mc:Ignorable="d" FontFamily="Microsoft Yahei"
-        xmlns:control="http://metro.mahapps.com/winfx/xaml/controls" ResizeMode="NoResize"
-        Title="{x:Static p:UIresources.autocompleteSourceSetting}" Height="320" Width="530" WindowStartupLocation="CenterScreen">
+                     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                     xmlns:control="http://metro.mahapps.com/winfx/xaml/controls"
+                     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                     xmlns:local="clr-namespace:pcb"
+                     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                     xmlns:p="clr-namespace:pcb.Properties"
+                     Title="{x:Static p:UIresources.autocompleteSourceSetting}"
+                     Width="530"
+                     Height="320"
+                     BorderBrush="AliceBlue"
+                     FontFamily="Microsoft Yahei"
+                     ResizeMode="NoResize"
+                     WindowStartupLocation="CenterScreen"
+                     mc:Ignorable="d">
     <Grid>
-        <ListBox x:Name="list_type" HorizontalAlignment="Left" Height="271" Margin="10,10,0,0" VerticalAlignment="Top" Width="108" SelectionChanged="list_type_SelectionChanged" FontFamily="Microsoft Yahei">
-            <ListBoxItem Content="{x:Static p:UIresources.scbObj}"/>
-            <ListBoxItem Content="{x:Static p:UIresources.scbTag}"/>
-            <ListBoxItem Content="{x:Static p:UIresources.scbTeam}"/>
-            <ListBoxItem Content="{x:Static p:UIresources.entityNames}"/>
+        <ListBox x:Name="list_type"
+                 Width="108"
+                 Height="271"
+                 Margin="10,10,0,0"
+                 HorizontalAlignment="Left"
+                 VerticalAlignment="Top"
+                 FontFamily="Microsoft Yahei"
+                 SelectionChanged="list_type_SelectionChanged">
+            <ListBoxItem Content="{x:Static p:UIresources.scbObj}" />
+            <ListBoxItem Content="{x:Static p:UIresources.scbTag}" />
+            <ListBoxItem Content="{x:Static p:UIresources.scbTeam}" />
+            <ListBoxItem Content="{x:Static p:UIresources.entityNames}" />
         </ListBox>
-        <ListBox x:Name="list_content" HorizontalAlignment="Left" Height="241" Margin="123,10,0,0" VerticalAlignment="Top" Width="391" FontFamily="Microsoft Yahei"/>
-        <Button x:Name="btn_delete" FontFamily="Microsoft Yahei" Content="{x:Static p:UIresources.delete}" HorizontalAlignment="Left" Margin="123,256,0,0" VerticalAlignment="Top" Width="75" RenderTransformOrigin="0.143,0.424" Click="btn_delete_Click"/>
-        <Button x:Name="btn_add" FontFamily="Microsoft Yahei" Content="{x:Static p:UIresources.add}" HorizontalAlignment="Left" Margin="439,256,0,0" VerticalAlignment="Top" Width="75" Click="btn_add_Click"/>
-        <TextBox x:Name="textBox" HorizontalAlignment="Left" FontFamily="Microsoft Yahei" Height="23" Margin="203,256,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="231" KeyDown="textBox_KeyDown"/>
+        <ListBox x:Name="list_content"
+                 Width="391"
+                 Height="241"
+                 Margin="123,10,0,0"
+                 HorizontalAlignment="Left"
+                 VerticalAlignment="Top"
+                 FontFamily="Microsoft Yahei" />
+        <Button x:Name="btn_delete"
+                Width="75"
+                Margin="123,256,0,0"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Click="btn_delete_Click"
+                Content="{x:Static p:UIresources.delete}"
+                FontFamily="Microsoft Yahei"
+                RenderTransformOrigin="0.143,0.424" />
+        <Button x:Name="btn_add"
+                Width="75"
+                Margin="439,256,0,0"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Click="btn_add_Click"
+                Content="{x:Static p:UIresources.add}"
+                FontFamily="Microsoft Yahei" />
+        <TextBox x:Name="textBox"
+                 Width="231"
+                 Height="23"
+                 Margin="203,256,0,0"
+                 HorizontalAlignment="Left"
+                 VerticalAlignment="Top"
+                 FontFamily="Microsoft Yahei"
+                 KeyDown="textBox_KeyDown"
+                 Text=""
+                 TextWrapping="Wrap" />
     </Grid>
 </control:MetroWindow>
