--- a/pcb/autocomplete_menu.xaml
+++ b/pcb/autocomplete_menu.xaml
@@ -1,59 +1,64 @@
-﻿ <Window x:Class="pcb.autocomplete_menu"
+﻿
+<Window x:Class="pcb.autocomplete_menu"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:pcb"
-        mc:Ignorable="d"
-        Title="autoComplete" Height="250" Width="180" WindowStyle="None" Focusable="False" Visibility="Hidden" ResizeMode="NoResize" ShowInTaskbar="False">
-    <ListBox x:Name="listbox" Foreground="White" Background="#232323" Focusable="False" 
-             BorderBrush="White" BorderThickness="1" GotFocus="listbox_GotFocus" >
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        Title="autoComplete"
+        Width="180"
+        Height="250"
+        Focusable="False"
+        ResizeMode="NoResize"
+        ShowInTaskbar="False"
+        Visibility="Hidden"
+        WindowStyle="None"
+        mc:Ignorable="d">
+    <ListBox x:Name="listbox"
+             Background="#232323"
+             BorderBrush="White"
+             BorderThickness="1"
+             Focusable="False"
+             Foreground="White"
+             GotFocus="listbox_GotFocus">
         <ListBox.ItemContainerStyle>
             <Style TargetType="ListBoxItem">
                 <Setter Property="Template">
                     <Setter.Value>
                         <ControlTemplate TargetType="{x:Type ListBoxItem}">
                             <Border x:Name="Bd"
-                            BorderBrush="{TemplateBinding BorderBrush}"
-                            BorderThickness="{TemplateBinding BorderThickness}"
-                            Background="{TemplateBinding Background}"
-                            Padding="{TemplateBinding Padding}"
-                            SnapsToDevicePixels="true">
+                                    Background="{TemplateBinding Background}"
+                                    BorderBrush="{TemplateBinding BorderBrush}"
+                                    BorderThickness="{TemplateBinding BorderThickness}"
+                                    Padding="{TemplateBinding Padding}"
+                                    SnapsToDevicePixels="true">
                                 <ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
-                                            SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
-                                            VerticalAlignment="{TemplateBinding VerticalContentAlignment}" />
+                                                  VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                                  SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
                             </Border>
                             <ControlTemplate.Triggers>
                                 <MultiTrigger>
                                     <MultiTrigger.Conditions>
-                                        <Condition Property="Selector.IsSelectionActive"
-                                            Value="False" />
-                                        <Condition Property="IsSelected"
-                                            Value="True" />
+                                        <Condition Property="Selector.IsSelectionActive" Value="False" />
+                                        <Condition Property="IsSelected" Value="True" />
                                     </MultiTrigger.Conditions>
-                                    <Setter Property="Background"
-                                    TargetName="Bd"
-                                    Value="#545454" />
+                                    <Setter TargetName="Bd" Property="Background" Value="#545454" />
                                 </MultiTrigger>
                                 <MultiTrigger>
                                     <MultiTrigger.Conditions>
-                                        <Condition Property="Selector.IsSelectionActive"
-                                            Value="True" />
-                                        <Condition Property="IsSelected"
-                                            Value="True" />
+                                        <Condition Property="Selector.IsSelectionActive" Value="True" />
+                                        <Condition Property="IsSelected" Value="True" />
                                     </MultiTrigger.Conditions>
-                                    <Setter Property="Background"
-                                    TargetName="Bd"
-                                    Value="#545454" />
+                                    <Setter TargetName="Bd" Property="Background" Value="#545454" />
                                 </MultiTrigger>
                                 <Trigger Property="IsMouseOver" Value="true">
-                                    <Setter Property="Background"  Value="#747474"/>
+                                    <Setter Property="Background" Value="#747474" />
                                 </Trigger>
                             </ControlTemplate.Triggers>
                         </ControlTemplate>
                     </Setter.Value>
                 </Setter>
             </Style>
-        </ListBox.ItemContainerStyle>        
-    </ListBox> 
+        </ListBox.ItemContainerStyle>
+    </ListBox>
 </Window>
