added statistics, showmessage for python, icon, fixed snippet bug

--- a/pcb/CustomMessageBox.xaml
+++ b/pcb/CustomMessageBox.xaml
@@ -12,27 +12,18 @@
                       BorderBrush="#1686B5"
                       BorderThickness="2"
                       Closing="MetroWindow_Closing"
-                      Icon="Command_Block.ico"
+                      Icon="icon.png"
                       ResizeMode="NoResize"
                       ShowCloseButton="False"
+                      ShowIconOnTitleBar="False"
                       ShowInTaskbar="False"
-                      ShowTitleBar="False"
+                      ShowMaxRestoreButton="False"
+                      ShowMinButton="False"
                       Topmost="True"
                       WindowStartupLocation="CenterScreen"
                       mc:Ignorable="d">
     <Grid>
-        <Rectangle x:Name="TitleBar"
-                   Height="40"
-                   VerticalAlignment="Top"
-                   Fill="#1686B5" />
-        <TextBlock x:Name="title"
-                   Height="25"
-                   Margin="10"
-                   VerticalAlignment="Top"
-                   FontFamily="Microsoft Yahei"
-                   FontSize="20"
-                   Foreground="Black" />
-        <ScrollViewer Margin="20,60,5,45">
+        <ScrollViewer Margin="5,5,5,45">
             <TextBlock x:Name="message"
                        Background="White"
                        FontFamily="Microsoft Yahei"
