small changes for the color window

--- a/pcb/colorGenerator.xaml
+++ b/pcb/colorGenerator.xaml
@@ -9,6 +9,7 @@
                       Title="Color"
                       Width="570"
                       Height="350"
+                      BorderBrush="AliceBlue"
                       Icon="Command_Block.ico"
                       ResizeMode="NoResize"
                       ShowIconOnTitleBar="False"
@@ -65,7 +66,7 @@
                        Fill="Black"
                        Stroke="Black" />
             <TextBox x:Name="ColorHex"
-                     Width="104"
+                     Width="123"
                      Height="23"
                      Margin="10,110,0,0"
                      HorizontalAlignment="Left"
@@ -75,7 +76,7 @@
             <Button x:Name="btnChangeColor"
                     Width="60"
                     Height="26"
-                    Margin="119,110,0,0"
+                    Margin="138,110,0,0"
                     HorizontalAlignment="Left"
                     VerticalAlignment="Top"
                     Click="btnChangeColor_Click"
@@ -93,7 +94,7 @@
             <Button x:Name="btnAddColor"
                     Width="90"
                     Height="26"
-                    Margin="184,110,0,0"
+                    Margin="203,110,0,0"
                     HorizontalAlignment="Left"
                     VerticalAlignment="Top"
                     Click="btnAddColor_Click"
