fixed some bugs

--- a/pcb/MainWindow.xaml
+++ b/pcb/MainWindow.xaml
@@ -41,11 +41,12 @@
                                    HorizontalScrollBarVisibility="Auto"
                                    LineNumbersForeground="#a6a6a6"
                                    PreviewKeyDown="Editor_PreviewKeyDown"
+                                   PreviewMouseWheel="Editor_PreviewMouseWheel"
                                    ScrollViewer.VerticalScrollBarVisibility="Auto"
                                    ShowLineNumbers="True"
                                    TextChanged="Editor_TextChanged"
                                    VerticalScrollBarVisibility="Auto"
-                                   WordWrap="True" PreviewMouseWheel="Editor_PreviewMouseWheel">
+                                   WordWrap="True">
                 <avalonEdit:TextEditor.ContextMenu>
                     <ContextMenu>
                         <MenuItem Click="selectAll"
@@ -163,7 +164,7 @@
                           InputGestureText="Ctrl + S"
                           IsEnabled="False" />
             </MenuItem>
-            <MenuItem Header="{x:Static p:UIresources.edit}" Click="colorClick">
+            <MenuItem Header="{x:Static p:UIresources.edit}">
                 <MenuItem Click="Escape_Click"
                           Header="{x:Static p:UIresources.escapeSelected}"
                           InputGestureText="Alt + \" />
@@ -202,7 +203,7 @@
                 <Separator />
                 <MenuItem Click="openPyEditor" Header="{x:Static p:UIresources.runPython}" />
                 <MenuItem Click="openUuidDialog" Header="UUID" />
-                <MenuItem Header="{x:Static p:UIresources.colorGen}"/>
+                <MenuItem Click="colorClick" Header="{x:Static p:UIresources.colorGen}" />
             </MenuItem>
             <MenuItem x:Name="customs" Header="{x:Static p:UIresources.custom_functions}" />
             <MenuItem Header="{x:Static p:UIresources.setting}">
